Fix contrast in vite styles

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .read-the-docs {
-  color: #888;
+  color: #919191;
 }
 
 @media (prefers-color-scheme: light) {
